attempt to fix styles error on mobile

--- a/frontend/src/components/Search.module.css
+++ b/frontend/src/components/Search.module.css
@@ -18,7 +18,7 @@
 
 .button {
   position: absolute;
-  right: 0.1rem;
+  right: 0;
   padding: 0.5rem 1rem;
   color: white;
   background-color: #c20c0c;
