--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,14 @@ body {
   background-color: #f5f5f5;
   /* min-height: 100vh; */
 }
+input {
+  -webkit-appearance: none;
+  appearance: none;
+  border-radius: 0;
+  box-sizing: border-box;
+}
+*,
+*::input,
+*::after {
+  box-sizing: border-box;
+}
